# shell-bucket

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
native/sb/: Dockerfile  README.md  build.sh  check.sh  v.mod
native/sb/csrc/: sb_aead.c  sb_aead.h  sb_deflate.c  sb_deflate.h
native/sb/src/: main.v
native/sb/test/: arq.sh  arqudp.sh  bin.sh  clip.sh  crypto.sh  ctl.sh  deflate.sh  dispatch.sh  fetch.sh  gather.sh  hop.sh  inject.sh  kill.sh  link.sh  marker.rc  muxscan.sh  muxsock.sh  passthrough.sh  prune.sh  punch.sh  resolve.sh  revert.sh  sig.sh  stun.sh  token.sh  udp.sh
src/shell_bucket/: __init__.py  apc_filter.py  backhaul.py  cli.py  config.py  file_delivery.py  known_hosts.py  lazy_alias.py  mux_frame.py  tmux_fetch.py  topology.py  transport.py  wrapper.py
src/shell_bucket/assets/: sb-tmux.sh
tests/: test_apc_filter.py  test_backhaul.py  test_cli.py  test_config.py  test_file_delivery.py  test_known_hosts.py  test_lazy_alias.py  test_mux_frame.py  test_tmux_fetch.py  test_topology.py  test_transport.py  test_wrapper.py
tests/integration/: conftest.py  cross_impl_driver.py  test_cross_impl.py  test_ssh_connection.py  test_upgrade_e2e.py  upgrade_e2e_driver.py
